Added default prefered device feature.
Added a new button for marking device as default.
Added the preference value to schema.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,6 +62,21 @@
     text-align: right;
 }
 
+.ns-button {
+    padding: 6px;
+    border: 1px solid #BBB;
+    background: #f9f9f9;
+    cursor: pointer;
+}
+
+.ns-button:hover {
+    background: #CCC;
+}
+
+.ns-button:active {
+    background: #AAA;
+}
+
 .ns-action-button {
     padding: 6px;
     border: 1px solid #BBB;
